website design now set up

--- a/htmlGlobalAttributes/htmlGlobalAttributes.html
+++ b/htmlGlobalAttributes/htmlGlobalAttributes.html
@@ -14,22 +14,329 @@
     <h1>Html global Attributes</h1>
     
     <h3>Global Attributes</h3>
-    <nav>
-        <a>accesskey</a>|
-        <a>class</a>|
-        <a>contenteditable</a>|
-        <a>data-*</a>|
-        <a>dir</a>|
-        <a>draggable</a>|
-        <a>hidden</a>|
-        <a>id</a>|
-        <a>lang</a>|
-        <a>specllcheck</a>|
-        <a>style</a>|
-        <a>tabindex</a>|
-        <a>title</a>|
-        <a>translate</a>
-    </nav>
+    <details>
+        <summary><b>accesskey</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>class</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>contenteditable</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>data-*</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>dir</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>draggable</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>hidden</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>id</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>lang</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>spellcheck</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>style</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>tabindex</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>title</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+    <details>
+        <summary><b>translate</b></summary>
+
+        <p></p>
+
+        <br>
+
+        <h3>Examples:</h3>
+        <img src="">
+        <p>This is how its coded:</p>
+        <img src="">
+
+        <br>
+
+        <h3>Syntax:</h3>
+        <p>None</p>
+
+        <br>
+
+        <h3>Technical Details</h3>
+        <p>Supported Html Tags : </p>
+
+    </details>
+
 
 </body>
 </html>
