--- a/htmlEventAttributes/htmlEventAttributes.html
+++ b/htmlEventAttributes/htmlEventAttributes.html
@@ -12,11 +12,17 @@
     
         <nav>
             <a href="./clipboardEventAttributes/clipboardEventAttributes.html">Clipboard event attributes</a>
+            <span>||</span>
             <a href="./dragEventAttributes/dragEventAttributes.html">Drag event Attributes</a>
+            <span>||</span>
             <a href="./formEventAttributes/formEventAttributes.html">Form event attributes</a>
+            <span>||</span>
             <a href="./keyboardEventAttributes/keyboardEventAttributes.html">Keyboard event attributes</a>
+            <span>||</span>
             <a href="./mediaEventAttributes/mediaEventAttributes.html">Media event attributes</a>
+            <span>||</span>
             <a href="./mouseEventAttributes/mouseEventAttributes.html">Mouse event attributes</a>
+            <span>||</span>
             <a href="./miscEventAttributes/miscEventAttributes.html">Misc event attributes</a>
         </nav>
 
