--- a/htmlElements/metaInfo/meta.html
+++ b/htmlElements/metaInfo/meta.html
@@ -54,13 +54,17 @@
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported. 
+    <p>The global attributes are supported. 
         <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
     </p>
-    <p>The charset attribute is supported to specify the character endcoding for the document. This is always utf-8 for html5 documents.</p>
-    <p>The content attribute is supported which is used to specify the text value associated with this meta tags use</p>
-    <p>The http-equiv attribute is used to provide a HTTP header for the information/value of the content attribute. Allowed values are all HTTP headers</p>
-    <p>The name attribute is used to specify a name for the metadata.</p>
+    <p>The charset attribute is supported to specify the character endcoding for the document. This is always utf-8 for html5 documents. Example -> "charset="utf-8""</p>
+    <p>The content attribute is supported which is used to specify the value associated with the http-equiv or name attribute. Example -> "content="30" || content="website
+         progression""</p>
+    <p>The http-equiv attribute is used to provide a HTTP header for the information/value of the content attribute. This attribute can be used to simulate an http response header.
+         Example -> http-equiv="refresh"</p>
+    <p>The name attribute is used to specify a name for the html element. For the meta element this attribute specifies a name for the information/value of the content attribute.
+        Example -> "name="description"""
+    </p>
     
 </body>
 </html>
