--- a/htmlElements/stylesAndSemantics/aside.html
+++ b/htmlElements/stylesAndSemantics/aside.html
@@ -31,17 +31,22 @@
     </aside>
     <p>Paragraph</p>
     <p>This is how its coded:</p>
-    <img src="media/images/examples/asideExample.png">
+    <img src="./media/images/examples/asideExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <img src="media/images/defaultStyles/asideDefault.jpg">
+    <img src="./media/images/defaultStyles/asideDefault.jpg">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global and event attributes are supported.</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>The event atttributes are suported.
+        <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+    </p>
 
 </body>
 </html>
