--- a/htmlElements/stylesAndSemantics/data.html
+++ b/htmlElements/stylesAndSemantics/data.html
@@ -28,7 +28,7 @@
         <li><data value="400">Mega Jumbo Ketchup</data></li>
     </ul>
     <p>This is how its coded:</p>
-    <img src="media/images/examples/dataExample.png">
+    <img src="./media/images/examples/dataExample.png">
 
     <br>
 
@@ -38,8 +38,10 @@
     <br>
 
     <h2>Attributes:</h2>
-    <p>A value attribute is available to supply a machine readable translation regarding the content of the element.</p>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>A value attribute is available to supply a machine readable translation regarding the content of the element. Example -> "value-"519""</p>
 
 </body>
 </html>
