--- a/htmlElements/stylesAndSemantics/details.html
+++ b/htmlElements/stylesAndSemantics/details.html
@@ -32,18 +32,23 @@
         <p>Second Paragraph inside of a details element!</p>
     </details>
     <p>This is how its coded:</p>
-    <img src="media/images/examples/detailsExample.png">
+    <img src="./media/images/examples/detailsExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <img src="media/images/defaultStyles/detailsDefault.jpg">
+    <img src="./media/images/defaultStyles/detailsDefault.jpg">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The details tag has an open attribute which is used to specifiy the details that are visible to the user.</p>
-    <p>The global and event attributes are supported.</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>The event atttributes are suported.
+        <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+    </p>
+    <p>The details tag has an open attribute. This attribute specifies if the details information is visible. Example -> "open"</p>
     
 </body>
 </html>
