--- a/htmlElements/stylesAndSemantics/dialog.html
+++ b/htmlElements/stylesAndSemantics/dialog.html
@@ -23,7 +23,7 @@
     <p>Paragraph</p>
     <dialog open>Open dialog</dialog>
     <p>This is how its coded:</p>
-    <img src="media/images/examples/dialogExample.png">
+    <img src="./media/images/examples/dialogExample.png">
 
     <br>
 
@@ -33,8 +33,13 @@
     <br>
 
     <h2>Attributes:</h2>
-    <p>The dialog tag has an open attribute which is used to specifiy if the element is active and that the user can interact with it.</p>
-    <p>The global and event attributes are supported.</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>The event atttributes are suported.
+        <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+    </p>
+    <p>The dialog tag has an open attribute. This attribute specifies if the dialog is visible. Example -> "open"</p>
 
 </body>
 </html>
