--- a/htmlElements/stylesAndSemantics/header.html
+++ b/htmlElements/stylesAndSemantics/header.html
@@ -28,17 +28,22 @@
         <p>Created by Stephen Mogg</p>
     </header>
     <p>This is how its coded:</p>
-    <img src="media/images/examples/headerExample.png">
+    <img src="./media/images/examples/headerExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <img src="media/images/defaultStyles/headerDefault.jpg">
+    <img src="./media/images/defaultStyles/headerDefault.jpg">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global and event attributes are supported.</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>The event atttributes are suported.
+        <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+    </p>
     
 </body>
 </html>
