--- a/htmlElements/stylesAndSemantics/main.html
+++ b/htmlElements/stylesAndSemantics/main.html
@@ -30,7 +30,7 @@
         <p>Content2 info</p>
     </main>
     <p>This is how its coded:</p>
-    <img src="media/images/examples/mainExample.png">
+    <img src="./media/images/examples/mainExample.png">
 
     <br>
 
@@ -40,7 +40,12 @@
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global and event attributes are supported.</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>The event atttributes are suported.
+        <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+    </p>
     
 </body>
 </html>
