--- a/htmlElements/stylesAndSemantics/span.html
+++ b/htmlElements/stylesAndSemantics/span.html
@@ -24,7 +24,7 @@
     <h2>Examples:</h2>
     <p> This text is normal <span style="color: rgb(9, 224, 9); font-style: italic;">unlike this text</span></p>
     <p>This is how its coded:</p>
-    <img src="media/images/examples/spanExample.png">
+    <img src="./media/images/examples/spanExample.png">
 
     <br>
 
@@ -34,7 +34,12 @@
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global and event attributes are supported.</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>The event atttributes are suported.
+        <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+    </p>
     
 </body>
 </html>
