--- a/htmlElements/stylesAndSemantics/style.html
+++ b/htmlElements/stylesAndSemantics/style.html
@@ -33,22 +33,27 @@
     <h4>H4 blue</h4>
     <p class="pStyle">Paragraph green</p>
     <p>This is how its coded:</p>
-    <img src="media/images/examples/styleExample.jpg">
+    <img src="./media/images/examples/styleExample.jpg">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <img src="media/images/defaultStyles/styleDefault.jpg">
+    <img src="./media/images/defaultStyles/styleDefault.jpg">
 
     <br><br>
 
     <h2>Attributes:</h2>
-    <p>The style tag has 2 attributes:</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>The event atttributes are suported.
+        <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+    </p>
+    <p>The style tag has 2 other attributes:</p>
     <p> - Media attribute. This attribute allows for a desired media device that the styling is to be suited best for.</p>
     <a href="https://www.w3schools.com/tags/att_style_media.asp"> - Further Media Attribute Information</a>
     <p> - Type attribute. This attribute helps specify the content between the style tags. Default is text/css</p>
     <a href="https://www.w3schools.com/tags/tag_style.asp"> - Further Type Attribute information</a>
-    <p>The global and event attributes are also supported.</p>
 
 </body>
 </html>
