--- a/htmlElements/tables/caption.html
+++ b/htmlElements/tables/caption.html
@@ -12,25 +12,48 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Caption - &lt;caption&gt;</h1>
+    <p>The caption defines a caption heading for inside of the table element.</p>
+    <p>This must be immediately after the table tag.</p>
+    <p>By default the caption is center aligned above the table, however the css properties text-align and caption-side can be used to align and place the caption.</p>
+    <p>A background colour on the table element does not affect the caption tag.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <table>
+        <caption>table caption at the top</caption>
+        <tr>
+            <th>row1</th>
+            <th>row2</th>
+        </tr>
+    </table>
+
+    <table>
+        <tr>
+            <th>row1</th>
+            <th>row2</th>
+        </tr>
+        <caption>Caption at the bottom</caption>
+    </table>
+
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/captionExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/captionDefault.png">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>The event atttributes are suported.
+        <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+    </p>
     
 </body>
 </html>
