--- a/htmlElements/metaInfo/head.html
+++ b/htmlElements/metaInfo/head.html
@@ -39,7 +39,7 @@
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported. 
+    <p>The global attributes are supported. 
         <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
     </p>
     
