--- a/htmlElements/stylesAndSemantics/div.html
+++ b/htmlElements/stylesAndSemantics/div.html
@@ -36,18 +36,23 @@
     <span>Here is text without a div element.</span>
     <span>After.</span>
     <p>This is how its coded:</p>
-    <img src="media/images/examples/divExample.png">
+    <img src="./media/images/examples/divExample.png">
 
     <br><br>
 
     <h2>Default Styling:</h2>
     <p>Default css settings are:</p>
-    <img src="media/images/defaultStyles/divDefault.jpg">
+    <img src="./media/images/defaultStyles/divDefault.jpg">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global and event attributes are supported.</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>The event atttributes are suported.
+        <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+    </p>
 
 </body>
 </html>
