--- a/htmlElements/stylesAndSemantics/summary.html
+++ b/htmlElements/stylesAndSemantics/summary.html
@@ -26,17 +26,22 @@
         <p>Paragraph inside of a details element!</p>
     </details>
     <p>This is how its coded:</p>
-    <img src="media/images/examples/summaryExample.png">
+    <img src="./media/images/examples/summaryExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <img src="media/images/defaultStyles/summaryDefault.jpg">
+    <img src="./media/images/defaultStyles/summaryDefault.jpg">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global and event attributes are supported.</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>The event atttributes are suported.
+        <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+    </p>
     
 </body>
 </html>
