--- a/htmlElements/tables/colGroup.html
+++ b/htmlElements/tables/colGroup.html
@@ -12,25 +12,55 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Colgroup - &lt;colGroup&gt;</h1>
+    <p>This element allows a group of one or more columns in a table element for formatting</p>
+    <p>THe colgroup tag is used to apply styles to these selected columns instead of applying styles for individual cells.</p>
+    <p>The colgroup element should be a child of the table element and it should be after any caption element and before all the other elements found inside of a table element.</p>
+    <p>To define different properties to a column within the colgroup element use the col element</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <table>
+        <colgroup span="2" style="background-color: brown;">
+        </colgroup>
+        <tr>
+            <th>heading 1</th>
+            <th>heading 2</th>
+            <th>heading 3</th>
+            <th>heading 4</th>
+        </tr>
+        <tr>
+            <th>cell 1</th>
+            <th>cell 2</th>
+            <th>cell 3</th>
+            <th>cell 4</th>
+        </tr>
+        <tr>
+            <th>cell 1</th>
+            <th>cell 2</th>
+            <th>cell 3</th>
+            <th>cell 4</th>
+        </tr>
+    </table>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/colgroupExample.png" style="height: 400px">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/colgroupDefault.png">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>The event atttributes are suported.
+        <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+    </p>
+    <p>The span tag is used to specify the number of columns that the col element should span over which should always be a number. Example -> "span="2""</p>
     
 </body>
 </html>
