--- a/htmlElements/tables/tFoot.html
+++ b/htmlElements/tables/tFoot.html
@@ -6,31 +6,68 @@
     <meta name="author" content="Stephen Mogg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>&lt;tFoot&gt;</title>
+    <title>&lt;tfoot&gt;</title>
 </head>
 
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>tfoot - &lt;tfoot&gt;</h1>
+    <p>The tfoot element is used to group footer content in a html table.</p>
+    <p>The tfoot element isused in conjunction with the thead and tbody elements to specify each part of the table.</p>
+    <p>Browsers use these elements to enable scrolling of the table body independently from the header and footer. Also when a table is printed these elements enable the footer and headers to be at the bottom and top of the page</p>
+    <p>The tfoot element must have one or more tr tags inside of it</p>
+    <p>This element must be used as a child of the table element after any caption or colgroup elements and before any tbody tfoot and tr elements.</p>
+    <p>This element does not affect the layout of the table by default but can be styled with css.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <table>
+        <thead>
+            <tr>
+                <th>Table heading cell 1</th>
+                <th>Table heading cell 2</th>
+                <th>Table heading cell 3</th>
+            </tr>
+        </thead>
+        <tbody style="background-color: darkgoldenrod;">
+            <tr>
+                <td>Table body cell 1</td>
+                <td>Table body cell 2</td>
+                <td>Table body cell 3</td>
+            </tr>
+            <tr>
+                <td>Table body cell 4</td>
+                <td>Table body cell 5</td>
+                <td>Table body cell 6</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td>Table footer cell 1</td>
+                <td>Table footer cell 2</td>
+                <td>Table footer cell 3</td>
+            </tr>
+        </tfoot>
+    </table>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/tfootExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/tfootDefault.png">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>The event atttributes are suported.
+        <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+    </p>
     
 </body>
 </html>
