--- a/htmlElements/tables/tr.html
+++ b/htmlElements/tables/tr.html
@@ -12,25 +12,41 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>tr - &lt;tr&gt;</h1>
+    <p>The tr element defines a row in an html table</p>
+    <p>this element should contain one or more th or td elements.</p>
     
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <table>
+        <tr>
+            <th>row 1</th>
+        </tr>
+        <tr>
+            <td>row 2</td>
+        </tr>
+        <tr>
+            <td>row 3</td>
+        </tr>
+    </table>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/trExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/trDefault.png">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>The event atttributes are suported.
+        <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+    </p>
     
 </body>
 </html>
