--- a/htmlElements/tables/caption.html
+++ b/htmlElements/tables/caption.html
@@ -21,6 +21,7 @@
     <br>
 
     <h2>Examples:</h2>
+    <h3>Table 1</h3>
     <table>
         <caption>table caption at the top</caption>
         <tr>
@@ -28,7 +29,7 @@
             <th>row2</th>
         </tr>
     </table>
-
+    <h3>Table 2</h3>
     <table>
         <tr>
             <th>row1</th>
