--- a/htmlElements/tables/table.html
+++ b/htmlElements/tables/table.html
@@ -33,8 +33,8 @@
         <thead>
             <tr>
                 <th>Table heading cell 1</th>
-                <td>Table heading cell 2</td>
-                <td>Table heading cell 3</td>
+                <th>Table heading cell 2</th>
+                <th>Table heading cell 3</th>
             </tr>
         </thead>
         <tbody>
